public/assets/ss-bulma.css
/* ... */
.invertedstandard-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 2px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/invertedstandard.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.verticalstandard-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 1px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/verticalstandard.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.rhythmgamestandard-icon {
	width: 100%;
	height: 100%;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/rhythmgamestandard.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.icon115s {
	width: 100%;
	height: 100%;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./115s.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.lawless-controllable-icon {
	width: 100%;
	height: 100%;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/lawless-controllable-icon.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.standard-controllable-icon {
	width: 100%;
	height: 100%;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/standard-controllable-icon.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.onesaber-controllable-icon {
	width: 100%;
	height: 100%;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/onesaber-controllable-icon.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.rebeatstandard-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 2px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/rebeatstandard.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.rebeatonesaber-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 2px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/rebeatonesaber.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.rebeat90degree-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 2px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/rebeat90degree.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.rebeat360degree-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 2px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/rebeat360degree.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.rebeatnoarrows-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 2px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/rebeatnoarrows.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.rebeatlawless-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 2px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/rebeatlawless.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.rebeatlightshow-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 2px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./Characteristics/rebeatlightshow.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.arrowheadright-icon {
	width: 100%;
	height: 100%;
	margin-left: 1px;
	margin-top: 2px;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./arrowheadright.svg');
		mask-type: alpha;
		width: 2.5em;
		height: 2.5em;
		margin-left: -1.1em;
		margin-right: -1em;
	}
}

.icon-mistakes {
	width: 100%;
	height: 100%;
	&::after {
		display: inline-block;
		background-color: currentColor;
		content: '';
		mask-image: url('./mistakes.svg');
		mask-type: alpha;
		width: 100%;
		height: 100%;
	}
}

.icon-mistakes-mini {
	width: 12px;
	height: 12px;
	content: url('./mistakes.webp');
	-webkit-filter: grayscale(100%);
	filter: grayscale(100%);
	filter: invert(0.6);
}

.content-box.festive {
	background-image: url(/assets/lights2.gif) !important;
	background-size: cover !important;
	padding: 0 !important;
	border-radius: 0 !important;
}

.replay-icon {
	width: 100%;
	height: 100%;
	background-size: cover !important;
	background-repeat: no-repeat !important;
	background-image: url('./bs-pepe.gif') !important;
}

.replay-icon-alt {
	margin-left: -0.5em;
	margin-bottom: 0.5em;
	width: 130%;
	height: 130%;
	background-size: cover;
	background-repeat: no-repeat;
	background-image: url('./replays.svg');
}

.analyzer-icon {
	margin-left: -0.5em;
	margin-bottom: 0.5em;
	width: 95%;
	height: 95%;
	background-size: cover;
	background-repeat: no-repeat;
	background-image: url('./analyzer.webp');
}

.acc-icon {
	width: 100% !important;
	height: 100% !important;
	background-size: cover !important;
	background-repeat: no-repeat !important;
	background-image: url('./acc.svg') !important;
}

.tech-icon {
	width: 100% !important;
	height: 100% !important;
	background-size: cover !important;
	background-repeat: no-repeat !important;
	background-image: url('./tech.svg') !important;
}

.midspeed-icon {
	width: 100% !important;
	height: 100% !important;
	background-size: cover !important;
	background-repeat: no-repeat !important;
	background-image: url('./midspeed.svg') !important;
}
/* ... */

